<resources>
    <string name="app_name">GSBTS</string>
    <string name="title_activity_driver_map">Map</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>

    <!--Menu Titles-->
    <string name="feed">Feed</string>
    <string name="map">Map</string>
    <string name="contact">Contact</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="logout">Log Out</string>

</resources>
